<resources>
    <string name="app_name">Movie Catalogue (UI/UX)</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_shows">Tv Shows</string>
    <string name="movie_name">Movie Name</string>
    <string name="overview">Overview</string>
    <string name="short_desc">Short Description</string>
    <string name="description">Description</string>
    <string name="featured_crew">Featured Crew</string>
    <string name="crew">Crew</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv_show">Detail Tv Show</string>
    <string name="bahasa_indonesia">Indonesia</string>
    <string name="bahasa_english">English</string>
    <string name="language_settings">Language Settings</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string-array name="movies_name">
        <item>A Star Is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bumblebee</item>
    </string-array>
    <string-array name="short_overview">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970.</item>
        <item>The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.</item>

    </string-array>
    <string-array name="movies_overview">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Viking\'s associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
    </string-array>
    <string-array name="movies_crew">
        <item>Bradley Cooper,Will Fetters,Eric Roth,Robert Carson,William A. Wellman</item>
        <item>Robert Rodriguez,Laeta Kalogridis,James Cameron</item>
        <item>James Wan,Will Beall,Paul Norris,Mort Weisinger,David Leslie Johnson-McGoldrick,Geoff Johns</item>
        <item>Anthony McCarten,Bryan Singer,Peter Morgan</item>
        <item>Hans Petter Moland,Frank Baldwin</item>
        <item>Sylvester Stallone,Steven Caple Jr.,Juel Taylor,Sascha Penn,Cheo Hodari Coker</item>
        <item>David Yates,J.K. Rowling</item>
        <item>M. Night Shyamalan</item>
        <item>Dean DeBlois,Cressida Cowell</item>
        <item>Joe Russo,Anthony Russo,Stephen McFeely,Christopher Markus</item>
        <item>Susanne Bier,Josh Malerman,Eric Heisserer</item>
        <item>Christina Hodson,Travis Knight</item>
    </string-array>
    <string-array name="tv_show_name">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Hanna</item>
        <item>Marvel\'s Iron Fist</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supernatural</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="tv_show_short_overview">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea.</item>
        <item>The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma.</item>
        <item>Before there was Batman, there was GOTHAM.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small-town life, the darkness and weirdness bubbling beneath Riverdale’s wholesome facade.</item>
        <item>Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be... perhaps better off</item>
        <item>When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force.</item>
        <item>Sheriff\'s deputy Rick Grimes awakens from a coma to find a post-apocalyptic world dominated by flesh-eating zombies.</item>
    </string-array>
</resources>